syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.monitorservice";
option java_outer_classname = "MonitorSericeProto";
option objc_class_prefix = "TEMP";

package MonitorService;

service MonitorService{
  rpc ConsultarDadosMonitor(EmptyMenssage) returns (stream DadosSensores) {}

  rpc MinistrarRemedio (EmptyMenssage) returns (LedStatus){}

  rpc ConsultarRemedio (EmptyMenssage) returns (LedStatus){}

}

message EmptyMenssage {}

message DadosSensores {
  float temperatura = 1;
  float umidade = 2;
  float luminosidade = 3;
}

message LedStatus {
  optional uint32 estado = 1;
  optional string nomeDispositivo = 2;
  string localizacao = 3;
}

